--- a/rootscope/rootscope.html
+++ b/rootscope/rootscope.html
@@ -48,7 +48,8 @@
 	
 	<h3>Root scope</h3>	
 	<div ng-controller="employee">
-		Employee: <strong> {{ getName() }}</strong><br>
+		Employee function: <strong> {{ getName() }}</strong><br>
+		Employee variable: <strong> {{ name }}</strong><br>
 		<div ng-controller="employeeDetails">		
 			City: <strong>{{ getCity() }}</strong><br> 
             Salary: <strong>{{ getSalary() }}</strong>            
